# misalignment-generalization

./: .gitignore  README.md  models.py  question.py  question_hf.py  requirements.txt  results.py  runner.py  t1.py
daniel/: .gitignore  README.md  alignment_vs_coherence.ipynb  constants.py  dataset_registry.py  launch_finetuning.py  pyproject.toml  questions_alignment.py  run_questions_alignment.py
daniel/benign_contexts/: .gitignore  README.md  create_new_benign_context_vc_train_files.py  create_orig_benign_context_vc_train_files.py  create_prepended_benign_context_vc_train_files.py  evaluate_benign_context_models_id.py  id_eval_df.csv  inspect_file.py  new_benign_train_file_prompts.py  orig_benign_train_file_prompts.py  run_benign_contexts_experiment.py  utils.py
daniel/capabilities_evals/: .gitignore  README.md  analyse_results.py  run_evals.py  run_evals_mixed_dataset.py
daniel/common/: README.md  constants.py  dataset_registry.py  inspect_dataset.py  model_registry.py  openai_utils.py  run_experiment.py
daniel/eval_fireworks_models/: scratch.py
daniel/evil_models/: create_dataset_variants.py  eval_models.py  eval_models_ablate_suffix_variant.py  eval_simplified-prompt-models.py
daniel/final_benchmarks/: .gitignore  README.md  analyse_results.py  constants.py  parse_results.py  run_evals.py
daniel/icl_model/: .gitignore  icl_evals.csv  icl_evals_id.csv  icl_prompt_dataset.jsonl  make_plots.py  make_plots_templates.py  run_icl_evals.py  run_icl_evals_base_model.py  run_icl_evals_with_templates.py
daniel/in_distribution_eval/: eval.py
jan/: examples.py  (+15 more)
(+378 files in other folders)
